Fixed margin problems that pop up when compiling full document

--- a/Lab1.tex
+++ b/Lab1.tex
@@ -17,7 +17,7 @@
 
 \chapter{Measurement and Uncertainty I\label{Measurement and Uncertainty 1}}
 
-\setcounter{page}{1}
+%\setcounter{page}{1}
 
 \section{Lab Notebooks}
 
