--- a/Lab8_intro.tex
+++ b/Lab8_intro.tex
@@ -48,7 +48,7 @@ change the acceleration term again.
 
 Let's review Hook's law for springs. Consider a system consisting of a mass
 attached to a spring lying on a frictionless surface, as depicted in next
-figure.\footnote{%
+figure.\sidenote{%
 A mass-spring system is often called a harmonic oscillator, it will show up
 under this name in your PH121 book.}
 
@@ -107,7 +107,7 @@ second order ordinary differential equation. If you stare at this equation
 long enough, the solution becomes somewhat apparent. Ask yourself: for what
 function can I take a derivative of twice and get the same function back
 along with a negative sign and a constant? If you are far enough in your
-M112 class the answer is obvious, a sine or a cosine.\footnote{%
+M112 class the answer is obvious, a sine or a cosine.\sidenote{%
 But if you are not far along in M112, don't worry. I am just trying to
 motivate the calculus savvy reader to believe the position as a function of
 time will be a sine or cosine function.} Of course it could also be a
@@ -122,8 +122,8 @@ derivatives we will see that our solution works so long as
 \omega =\sqrt{\frac{k}{m}} 
 \]%
 Note that there are two undetermined constants in this expression, namely $a$
-and $b$. Using a little trig\footnote{%
-OK, a lot of trig.}, we can rewrite this in an equivalent way\footnote{%
+and $b$. Using a little trig\sidenote{%
+OK, a lot of trig.}, we can rewrite this in an equivalent way\sidenote{%
 This is where you should start paying attention if you are concurrently
 taking M112.} 
 \[
@@ -298,7 +298,7 @@ v_{n+1} &=&v_{n}+(\Delta t)\left( -\frac{k}{m}x_{n}\right)
 \end{eqnarray*}%
 for our specific case. But sometimes it is easier to write a general routine
 and then provide $f(x_{n},y_{n},t_{n})$ and $g(x_{n},y_{n},t_{n})$ for our
-specific case in a subroutine\footnote{%
+specific case in a subroutine\sidenote{%
 The terms \textquotedblleft routine\textquotedblright\ and \textquotedblleft
 subroutine\textquotedblright\ will be familiar to the computer science
 majors. For the rest of us they mean \textquotedblleft
@@ -342,7 +342,7 @@ Putting this into Newton's second law, we end up with the relation
 ma_{tan}=-mg\sin \theta 
 \]%
 The tangential acceleration is related to the angular acceleration by%
-\footnote{%
+\sidenote{%
 Understanding the details here is not so important as noticing that we are
 again using Newton's second law to find the acceleration.} 
 \[
@@ -364,7 +364,7 @@ left hand side of the equation:
 \]%
 Despite it's relatively simple appearance, this second order nonlinear
 ordinary differential equation does \emph{not} have a simple analytic
-solution\footnote{%
+solution\sidenote{%
 The analytic solution involves a few not-so-straightforward operations
 involving differential calculus, as well as integrating the differential
 equation twice. The second integration is an elliptical integral of the
@@ -410,7 +410,7 @@ will appreciate more as you take higher level classes!
 It is worth noting that there are many more physical systems for which
 analytic solutions simply cannot be found (not all differential equations
 have analytic solutions). In those cases, you must solve numerically, there
-is no other choice!\footnote{%
+is no other choice!\sidenote{%
 You computer science majors have great job security!}
 
 The easiest way to numerically model the dynamics of a system is to ask
